--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
@@ -18,7 +18,7 @@
                             <h2>Cuentas Contables</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item">Catalogos</li>
+                                <li class="breadcrumb-item">Catálogos</li>
                                 <li class="breadcrumb-item">Cuentas contables</li>
                             </ul>
                         </div>
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <strong>Numero</strong>
+                                        <strong>Número</strong>
                                         <input type="text" ID="txtNumeroCtaCtble" class="form-control" />
                                     </div>
                                 </div>
