--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/ActualizaParametros.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/ActualizaParametros.cshtml
@@ -107,7 +107,7 @@
                                         <div class="form-group">
                                             <div class="col-lg-6 col-md-6 col-sm-6">
                                                 <label for="txtInv">
-                                                    $ Cantidad maxima de Remanente
+                                                    $ Cantidad máxima de Remanente
                                                     para la gasera
                                                 </label>
                                                 <input type="text" name="MaxRemaGaseraMensual" value="@ViewBag.Empresas[0].MaxRemaGaseraMensual" id="txtCant" class="form-control" />
