--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -108,7 +108,7 @@
                                                 <th>RFC</th>
                                                 <th>Contacto</th>
                                                 <th>Celular</th>
-                                                <th>Telefono</th>
+                                                <th>Teléfono</th>
                                                 <th>Correo</th>
                                                 <th>Acciones</th>
                                             </tr>
