--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
@@ -280,7 +280,7 @@
                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="form-group">
                                         <label for="ddlPais">
-                                            Pais:*
+                                            País:*
                                         </label>
                                         <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
                                             @foreach (var lst in ViewBag.ListaPaises)
