--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
@@ -40,27 +40,43 @@
         <div class="container-fluid">
             <div class="block-header">
                 <div class="row clearfix">
-                    <div class="col-lg-7 col-md-7 col-sm-12">
-                        <h3>&nbsp;Catálogo /  Usuarios </h3>
+                    <div class="col-lg-5 col-md-5 col-sm-12">
+                        <h2>Usuarios</h2>
+                        <ul class="breadcrumb padding-0">
+                            <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                            <li class="breadcrumb-item">Catálogos</li>
+                            <li class="breadcrumb-item">Usuarios</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="body">
                         <div class="row clearfix">
                             <div class="col-sm-3">
-                                <b>Gasera</b>
-                                <select id="ddlEmpresas" name="IdEmpresa" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                    @foreach (var lst in ViewBag.listaEmpresas)
+                                <div>
+                                    <strong>Gasera</strong>
+                                </div>
+                                <div>
+                                    @if (ViewBag.EsAdmin)
                                     {
-                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                        <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                            @foreach (var lst in ViewBag.Empresas)
+                                            {
+                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            }
+                                        </select>
                                     }
-                                </select>
+                                    else
+                                    {
+                                        @ViewBag.Empresas
+                                    }
+                                </div>
                             </div>
 
                         </div>
                         <div class="row clearfix">
                             <div class="col-md-12">
-                                <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-primary float-right" />
+                                <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
                             </div>
                         </div>
 
@@ -68,7 +84,7 @@
                             <div class="col-sm-12">
                                 <div class="row clearfix">
                                     <div class="col-sm-3">
-                                        <b>Nombre</b>
+                                        <strong>Nombre</strong>
                                         <select id="ddlUser" name="IdUsuario" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
                                             @foreach (var lst in ViewBag.Usuarios)
                                             {
@@ -78,8 +94,8 @@
                                     </div>
 
                                     <div class="col-sm-3">
-                                        <b>Correo Elect. (Acceso)</b>
-                                        <select id="ddlUser" name="Email1" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
+                                        <strong>Correo Elect. (Acceso)</strong>
+                                        <select id="ddlUser" name="Email1" class="form-control show-tick" data-live-search="true">
                                             @foreach (var lst in ViewBag.Usuarios)
                                             {
                                                 <option value="@lst.Email1">@lst.Email1</option>
@@ -87,7 +103,7 @@
                                         </select>
                                     </div>
                                     <div class="col-sm-3">
-                                        <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary float-left" />
+                                        <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
                                     </div>
                                 </div>
 
@@ -95,16 +111,16 @@
                         </div>
                         <br />
                         <div class="row clearfix">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" name="EmpresasGaseras">
+                                    <table class="table table-striped table-hover" name="EmpresasGaseras">
                                         <thead>
                                             <tr>
                                                 <th>Gasera</th>
                                                 <th>Nombre</th>
                                                 <th>Correo Elect. (Acceso)</th>
                                                 <th>Celular</th>
-                                                <th>Telefono</th>
+                                                <th>Teléfono</th>
                                                 <th>Acciones</th>
                                             </tr>
                                         </thead>
